--- a/week4/css/styles.scss
+++ b/week4/css/styles.scss
@@ -70,3 +70,24 @@ body{
     position: absolute;
     bottom: 0px;
 }
+
+.modal-content {
+	.modal-header {
+		background:$background-dark;
+		color:floralwhite;
+		border-bottom: none;
+
+		.close {
+			color:floralwhite;
+		}
+	}
+
+	.modal-body {
+		background:$background-pale;
+	}
+
+	.modal-footer {
+		background:$background-light;
+		border-top: none;
+	}
+}
